grammar.js
    source: $ => repeat($._node),

    _node: $ => choice(
      $.antlers_comment,
      $.php_raw,
      $.php_echo,
      prec(2, $.if_statement),
      prec(2, $.unless_statement),
      prec(10, $.collection_loop),
      prec(2, $.nav_loop),
      prec(2, $.taxonomy_loop),
      prec(2, $.form_loop),
      prec(3, $.form_errors),
      prec(2, $.entries_loop),
      prec(2, $.recursive_pattern),
      prec(2, $.partial_tag),
      prec(2, $.yield_tag),
      prec(2, $.section_tag),
      prec(2, $.scope_tag),
      prec(2, $.asset_tag),
      prec(2, $.glide_tag),
      prec(2, $.dump_tag),
      prec(2, $.switch_statement),
      prec(2, $.user_tag),
      prec(2, $.cache_tag),
      prec(2, $.no_cache_tag),
      prec(2, $.redirect_tag),
      prec(2, $.session_tag),
      prec(2, $.markdown_tag),
      prec(2, $.oauth_tag),
      prec(2, $.locales_tag),
      prec(2, $.svg_tag),
      prec(2, $.template_content_tag),
      prec(2, $.slot_tag),
      prec(2, $.push_tag),
      prec(2, $.prepend_tag),
      prec(2, $.once_tag),
      prec(1, $.antlers_tag),
      $.text
    ),

    antlers_comment: $ => token(choice(
      seq('{{#', repeat(choice(/[^#]/, /#[^}]/, /#}[^}]/)), '#}}'),
      seq('{{!--', repeat(choice(/[^-]/, /-[^-]/, /--[^}]/)), '--}}')
    )),

    antlers_tag: $ => seq(
      '{{',
      optional(/\s*/),
      $._tag_content,
      optional(/\s*/),
      '}}'
    ),

    _tag_content: $ => choice(
      $.multi_statement,
      prec(3, $.directive_tag),
      $.expression_with_modifiers
    ),

    tag_parameters: $ => prec.dynamic(10, repeat1($.parameter)),

    parameter: $ => prec.dynamic(10, choice(
      seq($.parameter_name, '=', $.parameter_value),
      seq(':', $.parameter_name, '=', $.parameter_value)
    )),

    parameter_name: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    parameter_value: $ => choice(
      $.string,
      $.number,
      $.variable,
      $.interpolated_parameter,
      'void'
    ),

    variable: $ => choice(
      // Disambiguated variable: $variable_name
      seq('$', /[a-zA-Z_][a-zA-Z0-9_]*/),
      // Antlers variable pattern supporting complex nested access: name:prop[0]:field
      /[_A-Za-z](?:[-_0-9A-Za-z:.]*|\[[^\]]*\])*(?:[_A-Za-z0-9])?/ 
    ),

    expression_with_modifiers: $ => seq(
      $.expression,
      repeat($.applied_modifier)
    ),

    applied_modifier: $ => seq(
      token(prec(10, '|')),
      $.modifier_name,
      optional($.modifier_parameters)
    ),

    expression: $ => choice(
      $.ternary_expression,
      $.binary_expression,
      $.parenthesized_expression,
      $.unary_expression,
      prec(-1, $.primary_expression)
    ),

    primary_expression: $ => choice(
      $.array_method_call,
      $.variable,
      $.string,
      $.number,
      $.boolean
    ),

    binary_expression: $ => choice(
      prec.right('exponentiation', seq(
        field('left', $.expression),
        token(prec(1, '**')),
        field('right', $.expression)
      )),
      
      prec.left('multiplicative', seq(
        field('left', $.expression),
        choice(
          token(prec(1, '*')),
          token(prec(1, '/')),
          token(prec(1, '%'))
        ),
        field('right', $.expression)
      )),
      
      prec.left('additive', seq(
        field('left', $.expression),
        choice(
          token(prec(1, '+')),
          token(prec(1, '-'))
        ),
        field('right', $.expression)
      )),
      
      prec.left('comparison', seq(
        field('left', $.expression),
        choice(
          token(prec(1, '===')),
          token(prec(1, '!==')),
          token(prec(1, '==')),
          token(prec(1, '!=')),
          token(prec(1, '<>')),
          token(prec(1, '<')),
          token(prec(1, '>')),
          token(prec(1, '<=')),
          token(prec(1, '>='))
        ),
        field('right', $.expression)
      )),
      
      prec.left('logical', seq(
        field('left', $.expression),
        choice(
          token(prec(1, '&&')),
          token(prec(15, '||')),
          token(prec(1, 'and')),
          token(prec(1, 'or')),
          token(prec(1, 'xor'))
        ),
        field('right', $.expression)
      )),

      // Antlers-specific bitwise operators
      prec.left('bitwise', seq(
        field('left', $.expression),
        choice(
          token(prec(1, 'bwa')),
          token(prec(1, 'bwo')),
          token(prec(1, 'bxor'))
        ),
        field('right', $.expression)
      )),

      // Null coalescing operator
      prec.left('coalescing', seq(
        field('left', $.expression),
        token(prec(1, '??')),
        field('right', $.expression)
      )),

      // Assignment operators
      prec.right('assignment', seq(
        field('left', $.expression),
        choice(
          token(prec(-1, '=')), // Lower precedence for simple assignment
          token(prec(1, '+=')),
          token(prec(1, '-=')),
          token(prec(1, '*=')),
          token(prec(1, '/=')),
          token(prec(1, '%=')),
          token(prec(1, '?='))
        ),
        field('right', $.expression)
      ))
    ),

    unary_expression: $ => prec.right('unary', choice(
      seq('!', $.expression),
      seq(token(prec(2, '-')), $.expression),
      seq(token(prec(2, '+')), $.expression)
    )),

    parenthesized_expression: $ => prec('parentheses', seq(
      '(',
      $.expression,
      ')'
    )),

    modifier_name: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    modifier_parameters: $ => choice(
      // Colon syntax: modifier:param  
      seq(
        token(prec(10, ':')),
        choice(
          alias(/[a-zA-Z_][a-zA-Z0-9_]*/, $.variable),
          $.number
        )
      ),
      // Function syntax: modifier('param1', 'param2')
      seq(
        '(',
        optional(seq(
          choice($.string, $.number, $.boolean, $.variable),
          repeat(seq(
            ',',
            optional(/\s*/),  
            choice($.string, $.number, $.boolean, $.variable)
          ))
        )),
        ')'
      )
    ),



    string: $ => choice(
      $.double_quoted_string,
      $.single_quoted_string
    ),

    double_quoted_string: $ => seq(
      '"',
      repeat(choice(
        $.string_escape_sequence,
        /[^"\\]/
      )),
      '"'
    ),

    single_quoted_string: $ => seq(
      "'",
      repeat(choice(
        $.string_escape_sequence,
        /[^'\\]/
      )),
      "'"
    ),

    number: $ => token(prec(3, choice(
      // Scientific notation (must come first)
      /-?(?:[0-9](?:[0-9_]*[0-9])?(?:\.[0-9](?:[0-9_]*[0-9])?)?|\.[0-9](?:[0-9_]*[0-9])?)[eE][+-]?[0-9](?:[0-9_]*[0-9])?/,
      
      // Hexadecimal
      /-?0[xX][0-9a-fA-F](?:[0-9a-fA-F_]*[0-9a-fA-F])?/,
      
      // Octal
      /-?0[0-7](?:[0-7_]*[0-7])?/,
      
      // Float (with decimal point)
      /-?(?:[0-9](?:[0-9_]*[0-9])?)?\.?[0-9](?:[0-9_]*[0-9])?/,
      
      // Integer
      /-?[0-9](?:[0-9_]*[0-9])?/
    ))),

    boolean: $ => choice('true', 'false'),

    collection_loop: $ => choice(
      // Collection with colon syntax: {{ collection:handle }}...{{ /collection:handle }}
      seq(
        seq('{{', /\s*/, $.collection_keyword, ':', $.variable, optional($.tag_parameters), /\s*/, '}}'),
        repeat($._node),
        seq('{{', /\s*/, '/', $.collection_keyword, ':', $.variable, /\s*/, '}}')
      ),
      
      // Collection with from parameter: {{ collection from="handle" }}...{{ /collection }}
      seq(
        seq('{{', /\s*/, $.collection_keyword, /\s+/, $.tag_parameters, /\s*/, '}}'),
        repeat($._node),
        seq('{{', /\s*/, '/', $.collection_keyword, /\s*/, '}}')
      )
    ),

    nav_loop: $ => choice(
      // Nav with colon syntax: {{ nav:handle }}...{{ /nav:handle }}
      seq(
        seq('{{', /\s*/, $.nav_keyword, ':', $.variable, optional($.tag_parameters), /\s*/, '}}'),
        repeat($._node),
        seq('{{', /\s*/, '/', $.nav_keyword, ':', $.variable, /\s*/, '}}')
      ),
      
      // Nav with from parameter: {{ nav from="handle" }}...{{ /nav }}
      seq(
        seq('{{', /\s*/, $.nav_keyword, /\s+/, $.tag_parameters, /\s*/, '}}'),
        repeat($._node),
        seq('{{', /\s*/, '/', $.nav_keyword, /\s*/, '}}')
      ),
      
      // Breadcrumbs navigation: {{ nav:breadcrumbs }}...{{ /nav:breadcrumbs }}
      seq(
        seq('{{', /\s*/, $.nav_keyword, ':', 'breadcrumbs', optional($.tag_parameters), /\s*/, '}}'),
        repeat($._node),
        seq('{{', /\s*/, '/', $.nav_keyword, ':', 'breadcrumbs', /\s*/, '}}')
      )
    ),

    taxonomy_loop: $ => choice(
      // Taxonomy with colon syntax: {{ taxonomy:handle }}...{{ /taxonomy:handle }}
      seq(
        seq('{{', /\s*/, $.taxonomy_keyword, ':', $.variable, optional($.tag_parameters), /\s*/, '}}'),
        repeat($._node),
        seq('{{', /\s*/, '/', $.taxonomy_keyword, ':', $.variable, /\s*/, '}}')
      ),
      
      // Taxonomy with from parameter: {{ taxonomy from="handle" }}...{{ /taxonomy }}
      seq(
        seq('{{', /\s*/, $.taxonomy_keyword, /\s+/, $.tag_parameters, /\s*/, '}}'),
        repeat($._node),
        seq('{{', /\s*/, '/', $.taxonomy_keyword, /\s*/, '}}')
      )
    ),

    form_loop: $ => choice(
      // Form with colon syntax: {{ form:handle }}...{{ /form:handle }}
      seq(
        seq('{{', /\s*/, $.form_keyword, ':', $.variable, optional($.tag_parameters), /\s*/, '}}'),
        repeat($._node),
        seq('{{', /\s*/, '/', $.form_keyword, ':', $.variable, /\s*/, '}}')
      ),
      
      // Form with from parameter: {{ form from="handle" }}...{{ /form }}
      seq(
        seq('{{', /\s*/, $.form_keyword, /\s+/, $.tag_parameters, /\s*/, '}}'),
        repeat($._node),
        seq('{{', /\s*/, '/', $.form_keyword, /\s*/, '}}')
      )
    ),

    text: $ => choice(
      $.ignore_symbol,
      /[^{@]+/
    )
  }
});

// Helper for comma-separated list (at least one)
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', optional(/\s*/), rule)));
}

// Helper for comma-separated list (zero or more)
function commaSep(rule) {
  return optional(commaSep1(rule));
}
